USI-64: implement session authentication
